--- a/wp-content/themes/heideandcook/views/layout/header.html.twig
+++ b/wp-content/themes/heideandcook/views/layout/header.html.twig
@@ -63,4 +63,18 @@
             <p class="author">BY {{ SP.WordPress.getAuthor() }}</p>
         </div>
     </div>
+{% elseif SP.ACF.get_field('submenu') and SP.ACF.get_field('submenu') != 'none' %}
+    <div class="horizontal-menu">
+        <div class="row column">
+            <div class="menu-centered">
+                {{
+                    SP.WordPress.menu({
+                        'container': false,
+                        'menu_id': SP.ACF.get_field('submenu'),
+                        'menu_class': 'vertical medium-horizontal menu'
+                    })
+                }}
+            </div>
+        </div>
+    </div>
 {% endif %}
