open location in new tabs

--- a/wp-content/themes/heideandcook/views/layout/locations.html.twig
+++ b/wp-content/themes/heideandcook/views/layout/locations.html.twig
@@ -28,7 +28,7 @@
                             </div>
                             <div class="medium-4 columns">
                                 <div class="address">
-                                    <a href="{{ location.google_maps_link }}">
+                                    <a href="{{ location.google_maps_link }}" target="_blank">
                                         {{ location.address_line_1 }}<br />
                                         {{ location.address_line_2 }}
                                     </a>
