--- a/wp-content/themes/heideandcook/views/panels/content-two-col.html.twig
+++ b/wp-content/themes/heideandcook/views/panels/content-two-col.html.twig
@@ -5,7 +5,13 @@
             <div class="content">
                 {{ SP.ACF.get_sub_field('content') }}
             </div>
-            <a href="{{ SP.ACF.get_sub_field('button_url') }}" class="button">{{ SP.ACF.get_sub_field('button_text') }}</a>
+            {% if SP.ACF.get_sub_field('button_type') == 'contact' %}
+                <a href="#" class="contact-scroll button">{{ SP.ACF.get_sub_field('button_text') }}</a>
+            {% elseif SP.ACF.get_sub_field('button_type') == 'quote' %}
+                <a href="#quote-lightbox" class="fancybox button">{{ SP.ACF.get_sub_field('button_text') }}</a>
+            {% else %}
+                <a href="{{ SP.ACF.get_sub_field('button_url') }}" class="button">{{ SP.ACF.get_sub_field('button_text') }}</a>
+            {% endif %}
         </div>
         <div class="medium-6 large-8 columns">
             <img src="{{ SP.ACF.get_sub_field('image').url }}" alt="{{ SP.ACF.get_sub_field('title') }}">
