menu and fancybox changes

--- a/wp-content/themes/heideandcook/views/layout/menu.html.twig
+++ b/wp-content/themes/heideandcook/views/layout/menu.html.twig
@@ -1,5 +1,5 @@
 <div id="main-menu" data-sticky-container>
-    <div class="sticky" data-sticky data-sticky-on="small">
+    <div class="sticky" data-sticky data-sticky-on="large">
         <div class="menu-wrapper">
             {# mobile #}
             <div class="title-bar" data-responsive-toggle="mobile-menu" data-hide-for="large">
