--- a/wp-content/themes/heideandcook/web/sass/_fancybox.scss
+++ b/wp-content/themes/heideandcook/web/sass/_fancybox.scss
@@ -61,6 +61,7 @@
     @include breakpoint(small only) {
         width: 100% !important;
         left: 0 !important;
+        top: 0 !important;
     }
 }
 
