lots of bug fixes

--- a/wp-content/themes/heideandcook/views/layout/header.html.twig
+++ b/wp-content/themes/heideandcook/views/layout/header.html.twig
@@ -70,7 +70,7 @@
                 {{
                     SP.WordPress.menu({
                         'container': false,
-                        'menu_id': SP.ACF.get_field('submenu'),
+                        'menu': SP.ACF.get_field('submenu'),
                         'menu_class': 'vertical medium-horizontal menu'
                     })
                 }}
