--- a/wp-content/themes/heideandcook/views/pages/post.html.twig
+++ b/wp-content/themes/heideandcook/views/pages/post.html.twig
@@ -4,7 +4,7 @@
 {% block header %}
     <div class="header-bar">
         <div class="row column">
-            <h1>{{ SP.WordPress.Title() }}</h1>
+            <h1>{{ SP.WordPress.Title()|trim(' - Heide and Cook') }}</h1>
         </div>
     </div>
 {% endblock %}
