--- a/wp-content/themes/heideandcook/views/panels/horizontal-menu.html.twig
+++ b/wp-content/themes/heideandcook/views/panels/horizontal-menu.html.twig
@@ -3,11 +3,13 @@
         <div class="menu-centered">
             <ul class="vertical medium-horizontal menu">
                 {% for page in SP.ACF.get_sub_field('pages') %}
-                    <li>
-                        <a href="{{ SP.WordPress.URL(page.page.ID) }}" class="{% if page.current_page %}active{% endif %}">
-                            {{ page.page.post_title }}
-                        </a>
-                    </li>
+                    {% if page %}
+                        <li>
+                            <a href="{{ SP.WordPress.URL(page.page.ID) }}" class="{% if page.current_page %}active{% endif %}">
+                                {{ page.page.post_title }}
+                            </a>
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
         </div>
