--- a/wp-content/themes/heideandcook/web/sass/layout/_footer.scss
+++ b/wp-content/themes/heideandcook/web/sass/layout/_footer.scss
@@ -4,7 +4,7 @@
   padding: rem-calc(70px) 0 rem-calc(30px) 0;
 
   .footer-input {
-    width: rem-calc(390px);
+    max-width: rem-calc(390px);
     margin: 0 auto;
   }
 
