--- a/wp-content/themes/heideandcook/web/sass/panels/_why-choose-us.scss
+++ b/wp-content/themes/heideandcook/web/sass/panels/_why-choose-us.scss
@@ -53,7 +53,7 @@
     .accordion-title::before {
       content: url("../images/expand.png");
       left: -35px;
-      top: rem-calc(14px);
+      top: 1.25rem;
     }
     .is-active .accordion-title::before {
       content: url("../images/expand-open.png");
@@ -69,6 +69,7 @@
     padding: .8rem .5rem;
     border: none !important;
     background-color: transparent;
+    line-height: 1.5;
     &:hover {
       background-color: transparent;
     }
