--- a/wp-content/themes/heideandcook/web/sass/_fancybox.scss
+++ b/wp-content/themes/heideandcook/web/sass/_fancybox.scss
@@ -50,10 +50,8 @@
         font-size: rem-calc(12px);
     }
     div.gform_wrapper > [type='text'], select, input:not(.button), textarea {
-        box-shadow: inset 0 2px 2px rgba(10, 10, 10, 0.1) !important;
-        border-radius: 0px !important;
-        padding: 3px 0 2px 6px !important;
         color: $medium-gray !important;
+        padding-right: rem-calc(30px) !important;
     }
     .gform_wrapper ul.gform_fields li.gfield {
         margin: 0;
