--- a/wp-content/themes/heideandcook/web/sass/app.scss
+++ b/wp-content/themes/heideandcook/web/sass/app.scss
@@ -26,7 +26,9 @@ $fa-font-path: "../libs/font-awesome/fonts";
 @import "panels/team-members";
 
 select {
-  appearance: caret;
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+  border: 1px solid #a7a7a7;
+  transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
 }
 
 .no-js .top-bar {
