--- a/wp-content/themes/heideandcook/views/pages/404.html.twig
+++ b/wp-content/themes/heideandcook/views/pages/404.html.twig
@@ -1,4 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block content %}
-    <h1>404 page not found</h1>
+    <div class="content-404 text-center">
+        <div class="row column">
+            <h1>404 page not found</h1>
+        </div>
+    </div>
 {% endblock %}
