--- a/wp-content/themes/heideandcook/web/sass/panels/_hero-header.scss
+++ b/wp-content/themes/heideandcook/web/sass/panels/_hero-header.scss
@@ -12,7 +12,7 @@
     top: 0;
     bottom: 0;
     width: 100%;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: 0;
   }
   .row {
@@ -22,13 +22,13 @@
   h1, h1 a {
     color: $white;
     font-size: rem-calc(48px);
-    line-height:1;
+    line-height: 1;
     text-transform: uppercase;
   }
   h3, h4, h3 a, h4, a {
     color: $light-green;
     font-size: rem-calc(32px);
-    line-height:1;
+    line-height: 1;
   }
   h1 a:hover, h3 a:hover, h4 a:hover, a:hover {
     color: $anchor-color-hover;
