--- a/wp-content/themes/heideandcook/views/panels/content-two-col-reversed.html.twig
+++ b/wp-content/themes/heideandcook/views/panels/content-two-col-reversed.html.twig
@@ -1,7 +1,9 @@
 <div class="generic-content-reversed">
     <div class="row">
         <div class="medium-6 large-5 columns">
-            <img src="{{ SP.ACF.get_sub_field('image').url }}" alt="{{ SP.ACF.get_sub_field('title') }}">
+            {% if SP.ACF.get_sub_field('image') %}
+                <img src="{{ SP.ACF.get_sub_field('image').url }}" alt="{{ SP.ACF.get_sub_field('title') }}">
+            {% endif %}
         </div>
         <div class="medium-6 large-7 columns">
             <h3 class="green-header">{{ SP.ACF.get_sub_field('title') }}</h3>
@@ -12,7 +14,7 @@
                 <a href="#" class="contact-scroll button">{{ SP.ACF.get_sub_field('button_text') }}</a>
             {% elseif SP.ACF.get_sub_field('button_type') == 'quote' %}
                 <a href="#quote-lightbox" class="fancybox button">{{ SP.ACF.get_sub_field('button_text') }}</a>
-            {% else %}
+            {% elseif SP.ACF.get_sub_field('button_type') == 'url' %}
                 <a href="{{ SP.ACF.get_sub_field('button_url') }}" class="button">{{ SP.ACF.get_sub_field('button_text') }}</a>
             {% endif %}
         </div>
