--- a/wp-content/themes/heideandcook/web/sass/layout/_menu.scss
+++ b/wp-content/themes/heideandcook/web/sass/layout/_menu.scss
@@ -134,7 +134,7 @@
 
       img {
         margin-top: -2px;
-        height: rem-calc(85px);
+        max-height: rem-calc(85px);
       }
     }
     .services {
