--- a/wp-content/themes/heideandcook/views/panels/content-grid.html.twig
+++ b/wp-content/themes/heideandcook/views/panels/content-grid.html.twig
@@ -4,7 +4,7 @@
     </div>
     <div class="row small-up-1 medium-up-2">
         {% for block in SP.ACF.get_sub_field('blocks') %}
-            <div class="column">
+            <div class="column" id="capability-{{ loop.index }}">
                 <img src="{{ block.image.url }}" alt="">
                 <h4 class="green-header">{{ block.title }}</h4>
                 <div class="content">
