--- a/wp-content/themes/heideandcook/web/sass/app.scss
+++ b/wp-content/themes/heideandcook/web/sass/app.scss
@@ -34,6 +34,9 @@ select {
 .no-js .top-bar {
   display: none;
 }
+.no-js #mobile-menu {
+  display: none;
+}
 
 @media screen and (min-width: 40em) {
   .no-js .top-bar {
